# rsexile

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/: pull_request_template.md
.github/workflows/: ci_cd.yaml
data/: poe2_campaign.json  poe2_campaign.local.example.json
scripts/: steam-launch.sh
src/: campaign.rs  log_watcher.rs  main.rs  overlay.rs  persistence.rs  self_update_cmd.rs
